# ReminderBox

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  input.css  manifest.json  package-lock.json  package.json  sw.js  vite.config.ts
.github/workflows/: gh-pages-deploy.yml
src/: App.tsx  app.rs  data.rs  global.d.ts  index.css  main.rs  main.tsx  types.rs  user_data.rs  vite-env.d.ts
src/components/: Header.tsx  ReminderSettingsDialog.tsx  mod.rs  reminder_item.rs  reminder_list.rs  reminder_settings.rs
src/effects/: storage.ts  timer.ts
src/pages/: AboutPage.tsx  ReminderPage.tsx  mod.rs  reminders_page.rs  settings_page.rs
