[package]
name = "reminderbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = [ "Ryan Brue <ryanbrue.dev@gmail.com>" ]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
uuid = { version = "1.10", features = ["v4", "js", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
web-sys = { version = "0.3.85", features = ["Storage"] }
chrono = { version = "0.4.43", features = ["serde"] }
